--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@remixicon/react": "^4.6.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/react-slick": "^0.23.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -34,6 +36,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-measure": "^2.5.2",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
@@ -47,6 +52,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-measure": "^2.0.12",
     "@types/spotify-web-playback-sdk": "^0.1.19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
